fix: wp name overflow

--- a/src/components/Wpinfo/WpInfo.css
+++ b/src/components/Wpinfo/WpInfo.css
@@ -8,6 +8,43 @@
   font-size: 16px;
 }
 
+.wp-info {
+  overflow: hidden;
+  padding: 0;
+}
+
 .workplace-name {
   margin-top: 0;
+  font-size: 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.tooltiptext {
+  visibility: hidden;
+  max-width: 80vw;
+  background-color: #96e8f5;
+  color: black;
+  text-align: center;
+  border-radius: 3px;
+  padding: 5px;
+  position: absolute;
+  font-size: 20px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+  overflow-wrap: break-word;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+@media only screen and (min-width: 700px) {
+  .tooltiptext {
+    max-width: 30vw;
+    overflow-wrap: break-word;
+  }
 }
