--- a/src/routes/WorkPlace/WorkPlace.css
+++ b/src/routes/WorkPlace/WorkPlace.css
@@ -111,6 +111,7 @@
 
   .workplace-header {
     min-width: 250px;
+    max-width: 320px;
   }
 
   .workplace-main {
